# DeepHCD

./: .gitignore  README.md  pyproject.toml  requirements.txt
deephcd/: __init__.py  main.py
deephcd/model/: layer.py  model.py  train.py
deephcd/simulate/: graph.py  simulate.py
deephcd/utils/: plot_utils.py  simulation_utils.py  train_utils.py  utilities.py
